[gd_scene load_steps=10 format=3 uid="uid://bdjyp2uqrkk4"]

[ext_resource type="Texture2D" uid="uid://dsbyu5ucrtkip" path="res://props/GunSprites/pizza_gun.png" id="1_dnngy"]
[ext_resource type="Script" path="res://scenes/guns/pizza_gun/pizza_gun.gd" id="1_mx4ph"]
[ext_resource type="Script" path="res://scenes/guns/pizza_gun/ammo_display.gd" id="2_vi8ei"]
[ext_resource type="FontFile" uid="uid://c213v1f8ryp2e" path="res://fonts/Pizzanumbersfont-Regular.ttf" id="3_nuaav"]
[ext_resource type="Script" path="res://scenes/guns/pizza_gun/gun_ammo_count.gd" id="5_ycklj"]
[ext_resource type="AudioStream" uid="uid://btbiapthuhfyi" path="res://music/gun-shoot.mp3" id="6_272kp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4l0ek"]
bg_color = Color(0.196078, 0.196078, 0.196078, 0.713726)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2y5sg"]
bg_color = Color(0.201527, 0.201527, 0.201527, 0.666667)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_00maa"]
bg_color = Color(0.1068, 0.785573, 0.89, 0.560784)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 9

[node name="PizzaGun" type="Sprite2D"]
scale = Vector2(2.3, 2.3)
texture = ExtResource("1_dnngy")
script = ExtResource("1_mx4ph")
fire_power = 1000
firerate = 0.3
reload_timer = 1.0
max_ammo = 6

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(31.3043, 2.38419e-07)
scale = Vector2(1.375, 1.28125)

[node name="PizzaGunHUD" type="CanvasLayer" parent="."]

[node name="AmmoDisplay" type="GridContainer" parent="PizzaGunHUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1089.0
offset_top = -715.0
offset_right = 1239.0
offset_bottom = -565.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 10.0
columns = 6
script = ExtResource("2_vi8ei")
metadata/_edit_use_anchors_ = true

[node name="GunAmmoCount" type="Label" parent="PizzaGunHUD"]
anchors_preset = -1
anchor_left = -0.00757576
anchor_right = -0.00757576
offset_left = 1233.0
offset_top = 43.0
offset_right = 1330.0
offset_bottom = 93.0
theme_override_fonts/font = ExtResource("3_nuaav")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_4l0ek")
text = "12"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_ycklj")
metadata/_edit_use_anchors_ = true

[node name="ReloadingBar" type="ProgressBar" parent="PizzaGunHUD" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(0, 10)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -60.0
offset_right = 75.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
shortcut_context = NodePath(".")
theme_override_styles/background = SubResource("StyleBoxFlat_2y5sg")
theme_override_styles/fill = SubResource("StyleBoxFlat_00maa")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="PizzaGunHUD/ReloadingBar"]
layout_mode = 0
offset_left = 1.0
offset_right = 150.0
offset_bottom = 30.0
text = "Reloading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_272kp")
